docs(test-quality): add Pattern 34 and wire P31-P34 into the scoring skill
The catalog defined 33 patterns while the skill declared P1-P30 in three
places, so Patterns 31, 32 and 33 were checked by nothing. A fourth pattern,
Concurrency Fix Without Race Test, existed only inside SKILL.md, numbered P31
and colliding with the P31 the catalog already had. It lived in a WIP stash
from 2026-08-27 (dangling commits 2f718a601 and 5f81b643a), so dropping the
stash dropped the pattern.

Catalog changes:

- Add the lost pattern as P34, which is jsenko's standard from PR 9789. A
  concurrency fix whose regression test has not been shown to fail against
  the unfixed code protects nothing.
- Remove the duplicated Patterns 29 and 30. Both appeared twice.
- Add a Scoring scope table recording which patterns gate the score and which
  do not, so the skill has one authoritative source to follow.
- Correct the Byteman infrastructure note. The -Pbyteman profile is not on
  main. It arrives with PR 9789, and until then Maven ignores the unknown
  profile id silently instead of failing, so the documented command appears
  to work while loading no rules.

Skill changes:

- Dispatch P1-P34 across the four detector agents instead of P1-P30.
- Rewrite Phase 1. It reads both + and - lines, because deleting a
  synchronized block is a concurrency change that a +-only filter cannot see.
  It picks up untracked files, because git diff never reports a brand-new
  test class. And it names the three ranges that return nothing by
  construction, each of which used to land on the clean-score branch.
- Fix the early exit. Returning 10/10 and stopping when no test files changed
  made P34 unreachable, awarding a perfect score to exactly the case P34
  calls a failure.
- Read the range against origin/main rather than main, so a stale local
  branch does not pull in files that are already upstream.
- Drop the claim that CI runs this skill. No job does.

Behavior changes:

- P32 scores down only in its 